<resources>
    <string name="app_name">플투</string>
    <string name="navigation_mypage">마이페이지</string>
    <string name="navigation_message">채팅</string>
    <string name="navigation_thunder">번개</string>
    <string name="navigation_home">홈</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_group_name">SOPT</string>
    <string name="home_more">more -></string>
    <string name="home_new_title">✨ NEW</string>
    <string name="home_hot_title">🔥 HOT</string>
    <string name="home_eat">먹을래</string>
    <string name="home_go">갈래</string>
    <string name="home_do">할래</string>
    <string name="home_searching">에서 찾는중</string>
    <string name="home_category">⚡ 번개 카테고리</string>
    <string name="home_empty_text">아직 만들어진 번개가 없어요!\n새로운 번개를 열어보세요</string>
    <string name="text_finish">완료</string>
    <string name="text_title">제목</string>
    <string name="text_date_type">YYYY.MM.DD</string>
    <string name="text_time_type">NN:NN</string>
    <string name="text_place">장소</string>
    <string name="text_date">날짜</string>
    <string name="text_time">시간</string>
    <string name="text_category">카테고리</string>
    <string name="text_posting_report"><u>게시글 신고</u></string>
    <string name="text_no">아니오</string>
    <string name="text_yes">네</string>
    <string name="text_check">확인</string>
    <string name="text_slash">/</string>
    <string name="text_read_detail">자세히 보기</string>
    <string name="edit">수정</string>
    <string name="delete">삭제</string>
    <string name="createthunder_openthunder">번개를\n오픈해 볼까요?</string>
    <string name="createthunder_thunder_name">번개 이름은 무엇인가요?</string>
    <string name="createthunder_choose_category">카테고리를 골라주세요.</string>
    <string name="createthunder_when_date">언제 열리는 번개인가요?</string>
    <string name="createthunder_when_time">몇 시에 열리는 번개인가요?</string>
    <string name="createthunder_where">어디서 열리는 번개인가요?</string>
    <string name="createthunder_howmany">몇 명이 모이나요?</string>
    <string name="createthunder_max20">최대 20명</string>
    <string name="createthunder_explain">번개 소개글을 작성해주세요.</string>
    <string name="createthunder_explaination">만나서 무엇을 할지, 위치 등을 구체적으로 적어주세요. 200자까지 쓸 수 있어요.</string>
    <string name="no_constraint">\u221E</string>
    <string name="createthunder_people_undecided">인원제한없음</string>
    <string name="createthunder_infinite">\u221E</string>
    <string name="createthunder_place_undecided">장소 미정</string>
    <string name="createthunder_time_undecided">시간 미정</string>
    <string name="createthunder_date_undecided">날짜 미정</string>
    <string name="text_signin">로그인</string>
    <string name="signin_main_message">함께 놀아요! \nPLAY TOGETHER</string>
    <string name="text_id">아이디</string>
    <string name="signin_input_id">아이디를 입력해주세요</string>
    <string name="text_pw">비밀번호</string>
    <string name="signin_input_pw">비밀번호를 입력해주세요</string>
    <string name="signin_finish">로그인 하기</string>
    <string name="signin_find_id">아이디 찾기</string>
    <string name="signin_change_pw">비밀번호 변경</string>
    <string name="text_signup">회원가입</string>
    <string name="thunderdetail_example">안녕하세요 저는 문수빈인데요. 제가 이번에 번개를 한 번 열어보려구 합니다. 장소는 저희 집이구요, 오실 때 귤 한 박스씩 사들고 오셔야 해요. 그럼 대문 활짝 열어두고 기다릴게요😊 아래 사진은 우리 집 오는 약도입니다. 다들 많은 신청 부탁드려요.\n체크\n체크\n체크\n체크\n체크\n체크\n체크\n체크\n체크\n체크</string>
    <string name="thunderdetail_apply_cancel">신청 취소하기</string>
    <string name="applied_complete">번개 신청을\n완료했어요!</string>
    <string name="applied_applier">"번개 신청자"</string>
    <string name="signupinfo_main_message">안전한 번개를 위해\n정보를 입력해주세요</string>
    <string name="text_name">이름</string>
    <string name="signupinfo_input_name">성함을 입력해주세요</string>
    <string name="text_gender">성별</string>
    <string name="text_man">남</string>
    <string name="text_woman">여</string>
    <string name="text_birth">생년월일</string>
    <string name="signupinfo_birth_example">ex. 1998.01.01</string>
    <string name="signupmain_message">사용할 아이디와 비밀번호를\n입력해주세요</string>
    <string name="signupmain_input_id">아이디 입력</string>
    <string name="text_duplication_check">중복확인</string>
    <string name="signupmain_id_duplication">사용 가능한 아이디입니다</string>
    <string name="signupmain_expression_id">5-20자 이내 소문자, 숫자 사용 가능</string>
    <string name="signupmain_expression_id_warn">5-20자 이내 소문자, 숫자만 사용 가능합니다.</string>
    <string name="signupmain_input_pw">비밀번호 입력</string>
    <string name="signupmain_expression_pw">8-15자 이내 대문자, 소문자, 숫자, 특수문자 사용 가능</string>
    <string name="signupmain_check_pw">비밀번호 확인</string>
    <string name="signupmain_agreement_pw">비밀번호 일치</string>
    <string name="signupmain_use_pw_ok">사용 가능한 비밀번호입니다</string>
    <string name="signupmain_agreement_pw_true">비밀번호가 일치합니다</string>
    <string name="signupmain_agreement_pw_false">비밀번호가 일치하지 않습니다</string>
    <string name="signup_finish_main">회원가입이 완료되었어요!</string>
    <string name="signup_finish_welcome">님, 반가워요</string>
    <string name="signup_finish_start">시작하기</string>
    <string name="text_ok">확인</string>
    <string name="cancel_application">신청 취소</string>
    <string name="my_thunder">나의 번개</string>
    <string name="tab_apply">신청한</string>
    <string name="tab_open">오픈한</string>
    <string name="tab_like">찜한</string>
    <string name="thunder_members">인원</string>
    <string name="apply_empty">아직 신청한 번개가 없어요!\n관심 있는 번개를 신청해 보세요</string>
    <string name="open_empty">아직 오픈한 번개가 없어요!\n새로운 번개를 오픈해 보세요</string>
    <string name="like_empty">아직 찜한 번개가 없어요!\n관심 있는 번개를 찜 해보세요</string>
    <string name="onboarding_user">님의</string>
    <string name="onboarding_mbti">MBTI는 무엇인가요?</string>
    <string name="onboarding_select_mbti">해당하는 MBTI를 선택해주세요</string>
    <string name="onboarding_e">E</string>
    <string name="onboarding_n">N</string>
    <string name="onboarding_f">F</string>
    <string name="onboarding_p">P</string>
    <string name="onboarding_i">I</string>
    <string name="onboarding_s">S</string>
    <string name="onboarding_t">T</string>
    <string name="onboarding_j">J</string>
    <string name="text_next">다음</string>
    <string name="text_get_start">시작하기</string>
    <string name="text_no_relevant">해당사항 없음</string>
    <string name="onboarding_start_thunder">동아리를\n추가해볼까요?</string>
    <string name="onboarding_select_option">개설과 참여 중 선택해주세요</string>
    <string name="text_open">개설</string>
    <string name="text_join">참여</string>
    <string name="onboarding_open_message">번개를 열 동아리나 단체를 개설해요!</string>
    <string name="onboarding_join_message">개설된 동아리나 단체에 참여해요!</string>
    <string name="onboarding_join_input_code">초대코드를\n입력해주세요!</string>
    <string name="onboarding_join_input_six">여섯 자리 코드를 입력해주세요</string>
    <string name="onboarding_enter">입장하기</string>
    <string name="onboarding_open_intro">개설할 동아리를\n소개해주세요!</string>
    <string name="onboarding_crew_name">동아리명</string>
    <string name="onboarding_crew_name_input">동아리명 입력</string>
    <string name="onboarding_crew_condition">1~15(공백포함) 이내 한글, 영문, 숫자 사용 가능</string>
    <string name="onboarding_crew_approve">사용 가능한 동아리명입니다</string>
    <string name="onboarding_crew_intro">한 줄 소개</string>
    <string name="onboarding_crew_intro_input">한 줄 소개를 입력해주세요 (15자 이내)</string>
    <string name="onboarding_open_end_top">님, 반가워요!</string>
    <string name="onboarding_open_end_start">번개를 시작해볼까요?</string>
    <string name="onboarding_open_share_code">초대코드 공유하기</string>
    <string name="onboarding_open_code">초대코드</string>
    <string name="onboarding_open_introduce">한줄소개</string>
    <string name="onboarding_crew_at">에서</string>
    <string name="onboarding_intro_title">나는 어떤 사람인가요?</string>
    <string name="onboarding_intro_nickname">닉네임</string>
    <string name="onboarding_intro_nickname_input">닉네임 입력</string>
    <string name="onboarding_intro_condition">2 ~ 10자(공백 불가) 한글, 영문, 숫자, 언더바(_) 사용 가능</string>
    <string name="onboarding_intro_warn">이미 사용중인 닉네임입니다</string>
    <string name="onboarding_intro_access">사용 가능한 닉네임입니다</string>
    <string name="onboarding_intro_simple">간단 소개</string>
    <string name="onboarding_intro_simple_input">간단 소개 입력</string>
    <string name="onboarding_intro_input_num">200자 이내</string>
    <string name="onboarding_intro_subway">선호하는 지하철역</string>
    <string name="onboarding_intro_subway_two">최대 2개 추가</string>
    <string name="onboarding_intro_add">+ 추가하기</string>
    <string name="onboarding_add">추가하기</string>
    <string name="onboarding_subway_title">선호하는 지하철역을\n알려주세요!</string>
    <string name="onboarding_subway">지하철역</string>
    <string name="onboarding_subway_input">지하철역 검색</string>
    <string name="onboarding_redown_title">PLAY TOGETHER,\n다시 만나서 기뻐요!</string>
    <string name="onboarding_redown_subtitle">어떤 동아리의 번개가 궁금하세요?</string>
    <string name="onboarding_plto_subway">선택 사항 없음</string>
    <string name="messageBox">채팅</string>
    <string name="messageListEmpty">아직 진행중인 채팅이 없어요!</string>
    <string name="thunder_list_title">같이&#160;</string>
    <string name="thunder_list_question">"?"</string>
    <string name="thunder_list_align">최신순</string>
    <string name="thunder_list_date_unknown">날짜 미정</string>
    <string name="thunder_list_place_unknown">장소 미정</string>
    <string name="thunder_list_time_unknown">시간 미정</string>
    <string name="thunder_item_title">선착순 곱창 5명 구함</string>
    <string name="thunder_item_people">인원 3/5</string>
    <string name="thunder_item_day">2022.04.13.신촌 14:00</string>
    <string name="home_dialog_group_title">MY동아리</string>
    <string name="home_dialog_SOPT">SOPT</string>
    <string name="home_dialog_button_text">+ 추가하기</string>
    <string name="home_dialog_create">개설하기</string>
    <string name="home_dialog_join">참여하기</string>
    <string name="home_item_title">문수빈네 집에서 붉닭\n볶음면 먹기</string>
    <string name="home_item_eat_text">먹을래</string>
    <string name="home_item_do_text">갈래</string>
    <string name="home_item_people_cnt_now">4</string>
    <string name="home_item_people_cnt_all">6</string>
    <string name="home_item_tool_people_cnt">4/6</string>
    <string name="home_item_tool_date">2022.03.10 신촌 14:00</string>
    <string name="sort_title">정렬 순서</string>
    <string name="sort_createdAt">최신순</string>
    <string name="sort_likeCnt">찜 많은순</string>
    <string name="mypage_dear">님</string>
    <string name="mypage_age">세,</string>
    <string name="text_coma">,</string>
    <string name="dummy_name">김세훈 님</string>
    <string name="dummy_sub">25세, 남, ENFJ</string>
    <string name="mypage_service_quit">서비스 탈퇴하기</string>
    <string name="string_real">정말</string>
    <string name="string_quit">탈퇴</string>
    <string name="mypage_question_quit">하시겠어요?</string>
    <string name="mypage_quit_info">서비스를 탈퇴하시면 개인 정보, 동아리 정보를 비롯한\n모든 회원 정보가 삭제되며 다시 복구할 수 없습니다.</string>
    <string name="string_do_quit">탈퇴하기</string>
    <string name="other_mypage_title">님의 마이페이지</string>
    <string name="other_mypage_age_slash">세 / </string>
    <string name="other_mypage_slash">/</string>
    <string name="login_title">함께놀아요\nPLAY TOGETHER</string>
    <string name="login_problem">문제가 있으신가요?</string>
    <string name="login_ask"><u>문의하기</u></string>
    <string name="mypage_setting">설정</string>
    <string name="mypage_alarm_setting">알림 설정</string>
    <string name="mypage_manage_accont">계정 관리</string>
    <string name="mypage_setting_guide">이용 가이드</string>
    <string name="loginterms_title">PLAY TOGETHER\n약관 동의</string>
    <string name="loginterms_about">서비스 이용을 위해 약관 동의가 필요해요!</string>
    <string name="loginterms_all">전체 동의</string>
    <string name="loginterms_must">(필수) &#160;</string>
    <string name="loginterms_select">(선택)&#160;</string>
    <string name="loginterms_terms1">(필수) 만 18세 이상</string>
    <string name="loginterms_agree">&#160;동의</string>
    <string name="loginterms_terms2"><b><u>이용약관</u></b></string>
    <string name="loginterms_terms3"><b><u>개인정보 수집 및 이용</u></b></string>
    <string name="loginterms_terms4"><b><u>마케팅 정보 수집 및 수신</u></b></string>
    <string name="loginterms_access">확인</string>
</resources>