<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="signViewModel"
            type="com.playtogether_android.app.presentation.ui.sign.viewmodel.SignViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.ui.login.view.LoginTermsActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@id/btn_loginterms_access"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tv_loginterms_title"
                style="@style/loginterms_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="28dp"
                android:text="@string/loginterms_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_loginterms_about"
                style="@style/loginterms_about"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/loginterms_about"
                app:layout_constraintStart_toStartOf="@id/tv_loginterms_title"
                app:layout_constraintTop_toBottomOf="@id/tv_loginterms_title" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_loginterms_terms_container"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="28dp"
                android:background="@drawable/bg_login_terms_gray03_1_radius_10"
                android:paddingBottom="32dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_loginterms_about">

                <androidx.appcompat.widget.AppCompatCheckBox
                    android:id="@+id/cb_loginterms_all"
                    style="@style/loginterms_all"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="22dp"
                    android:layout_marginTop="20dp"
                    android:button="@drawable/ic_selector_checkbox"
                    android:minWidth="0dp"
                    android:minHeight="0dp"
                    android:paddingStart="16dp"
                    android:text="@string/loginterms_all"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <View
                    android:id="@+id/view_loginterms_underline"
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_marginTop="20dp"
                    android:background="@color/gray_gray03"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/cb_loginterms_all" />

                <androidx.appcompat.widget.AppCompatCheckBox
                    android:id="@+id/cb_loginterms_term1"
                    style="@style/loginterms_terms"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="22dp"
                    android:layout_marginTop="40dp"
                    android:button="@drawable/ic_selector_checkbox"
                    android:minWidth="0dp"
                    android:minHeight="0dp"
                    android:paddingStart="16dp"
                    android:text="@string/loginterms_terms1"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/cb_loginterms_all" />

                <androidx.appcompat.widget.AppCompatCheckBox
                    android:id="@+id/cb_loginterms_term2"
                    style="@style/loginterms_terms"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:button="@drawable/ic_selector_checkbox"
                    android:minWidth="0dp"
                    android:minHeight="0dp"
                    android:paddingStart="16dp"
                    android:text="@string/loginterms_must"
                    app:layout_constraintStart_toStartOf="@id/cb_loginterms_term1"
                    app:layout_constraintTop_toBottomOf="@id/cb_loginterms_term1" />

                <TextView
                    android:id="@+id/tv_loginterms_term2"
                    style="@style/loginterms_terms"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/loginterms_terms2"
                    app:layout_constraintStart_toEndOf="@id/cb_loginterms_term2"
                    app:layout_constraintTop_toTopOf="@id/cb_loginterms_term2" />

                <TextView
                    style="@style/loginterms_terms"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/loginterms_agree"
                    app:layout_constraintStart_toEndOf="@id/tv_loginterms_term2"
                    app:layout_constraintTop_toTopOf="@id/tv_loginterms_term2" />

                <androidx.appcompat.widget.AppCompatCheckBox
                    android:id="@+id/cb_loginterms_term3"
                    style="@style/loginterms_terms"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:button="@drawable/ic_selector_checkbox"
                    android:minWidth="0dp"
                    android:minHeight="0dp"
                    android:paddingStart="16dp"
                    android:text="@string/loginterms_must"
                    app:layout_constraintStart_toStartOf="@id/cb_loginterms_term1"
                    app:layout_constraintTop_toBottomOf="@id/cb_loginterms_term2" />


                <TextView
                    android:id="@+id/tv_loginterms_term3"
                    style="@style/loginterms_terms"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/loginterms_terms3"
                    app:layout_constraintStart_toEndOf="@id/cb_loginterms_term3"
                    app:layout_constraintTop_toTopOf="@id/cb_loginterms_term3" />

                <TextView
                    style="@style/loginterms_terms"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/loginterms_agree"
                    app:layout_constraintStart_toEndOf="@id/tv_loginterms_term3"
                    app:layout_constraintTop_toTopOf="@id/tv_loginterms_term3" />

                <androidx.appcompat.widget.AppCompatCheckBox
                    android:id="@+id/cb_loginterms_term4"
                    style="@style/loginterms_terms"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:button="@drawable/ic_selector_checkbox"
                    android:minWidth="0dp"
                    android:minHeight="0dp"
                    android:paddingStart="16dp"
                    android:text="@string/loginterms_select"
                    app:layout_constraintStart_toStartOf="@id/cb_loginterms_term1"
                    app:layout_constraintTop_toBottomOf="@id/cb_loginterms_term3" />

                <TextView
                    android:id="@+id/tv_loginterms_term4"
                    style="@style/loginterms_terms"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/loginterms_terms4"
                    app:layout_constraintStart_toEndOf="@id/cb_loginterms_term4"
                    app:layout_constraintTop_toTopOf="@id/cb_loginterms_term4" />

                <TextView
                    style="@style/loginterms_terms"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/loginterms_agree"
                    app:layout_constraintStart_toEndOf="@id/tv_loginterms_term4"
                    app:layout_constraintTop_toTopOf="@id/tv_loginterms_term4" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_loginterms_access"
            style="@style/loginterms_all"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginBottom="36dp"
            android:background="@drawable/selector_rectangle_fill_gray03_to_black"
            android:minHeight="0dp"
            android:paddingVertical="18dp"
            android:text="@string/loginterms_access"
            android:textColor="@drawable/selector_text_gray01_to_main_green"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>